# mlutils

./: .gitmodules  README.md
mlutils/Cpp/datautils/text/: string_utils_noboost.cpp  string_utils_noboost.hpp
mlutils/misc/DownloadImages/: README  download_images.py
mlutils/python/datautils/image/: encodeimageset.py  encodings.py
mlutils/workshop/production_prediction/: main.py
mlutils/workshop/production_prediction/data/: __init__.py  data.py
mlutils/workshop/production_prediction/models/: __init__.py  time_series_graph.py
mlutils/workshop/scenetransition/: CMakeLists.txt  transition.cpp  transition.hpp
mlutils/workshop/simple_blockchain/: blockchain.py  intro.py
mlutils/workshop/simple_tf_structure/: config.py  main.py
mlutils/workshop/simple_tf_structure/config/: test_configuration.yaml
mlutils/workshop/simple_tf_structure/data/: __init__.py  data.py
mlutils/workshop/simple_tf_structure/models/: graph.py
mlutils/workshop/tfobj/: detect.py  xmlvoc2tfrecords.py
mlutils/workshop/tfobj/utils/: voc_to_tfrecord.py  xml_to_csv.py
mlutils/workshop/tfrec/: layers.py  simplenet.py
mlutils/workshop/tfrec/datautils/: __init__.py  data_utils.py  pathutils.py  save2hdf5.py  tfrecord_maker.py
mlutils/workshop/trigger_detection/: config.yaml  data_handling.py  main.py  model.py  utils.py
